--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -32,3 +32,11 @@
 [prune]
   go-tests = true
   unused-packages = true
+
+[[constraint]]
+  branch = "v2"
+  name = "gopkg.in/mgo.v2"
+
+[[constraint]]
+  name = "github.com/satori/go.uuid"
+  version = "1.2.0"
